fix(DropMenuButton): Visible color change

--- a/src/assets/styles/colors.css
+++ b/src/assets/styles/colors.css
@@ -17,4 +17,6 @@
     --palette-earth-dark-3: #fefae0;
     --palette-earth-dark-4: #dda15e;
     --palette-earth-dark-5: #bc6c25;
+
+    --transparent: #00000000;
 }
